Feat: added buttons for navigation

--- a/index.html
+++ b/index.html
@@ -105,5 +105,11 @@
         <footer class="footer"></footer>
     </section>
 
+    <a href="./twitter-layout/" class="btn">Twitter Layout</a>
+    <a href="./datascience-page-layout/" class="btn">Data Science Page Layout</a>
+    <a href="./component-library-layout/" class="btn">Component Library Layout</a>
+    <a href="./blog-layout/" class="btn">Blog Layout</a>
+
+
 </body>
 </html>
